CompilerSimpleJava/SemanticAnalyzer/simplejava.java
/* simplejava.java */
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

  static final public ASTProgram prog() throws ParseException {ASTClass c; ASTClasses cs; ASTFunctionDefinition f; ASTFunctionDefinitions fs;
cs = new ASTClasses(); fs = new ASTFunctionDefinitions();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = classDefs();
cs.addElement(c);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      f = funcDecs();
fs.addElement(f);
    }
{if ("" != null) return new ASTProgram(cs, fs, 1);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTInstanceVariableDef varDefs() throws ParseException {Token type; Token name; int dim = 0;
    type = jj_consume_token(ID);
    name = jj_consume_token(ID);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRCK:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(LBRCK);
      jj_consume_token(RBRCK);
dim++;
    }
    jj_consume_token(SCOLON);
{if ("" != null) return new ASTInstanceVariableDef(type.image, name.image, dim, type.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTClass classDefs() throws ParseException {Token name; ASTInstanceVariableDef v; ASTInstanceVariableDefs vs;
vs = new ASTInstanceVariableDefs();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(LBRC);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      v = varDefs();
vs.addElement(v);
    }
    jj_consume_token(RBRC);
{if ("" != null) return new ASTClass(name.image, vs, name.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFormals formal(ASTFormals formals) throws ParseException {Token t; Token t2; int dim = 0; ASTFormal formal;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      t = jj_consume_token(ID);
      t2 = jj_consume_token(ID);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRCK:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        jj_consume_token(LBRCK);
        jj_consume_token(RBRCK);
dim++;
      }
formal = new ASTFormal(t.image, t2.image, dim, t.beginLine); formals.addElement(formal); dim = 0;
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        t = jj_consume_token(ID);
        t2 = jj_consume_token(ID);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRCK:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_7;
          }
          jj_consume_token(LBRCK);
          jj_consume_token(RBRCK);
dim++;
        }
formal = new ASTFormal(t.image, t2.image, dim, t.beginLine); formals.addElement(formal); dim = 0;
      }
{if ("" != null) return formals;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;

{if ("" != null) return formals;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionDefinition funcDecs() throws ParseException {Token type; Token name; ASTFormals formals; ASTStatement s; ASTStatements ss;
formals = new ASTFormals();
    type = jj_consume_token(ID);
    name = jj_consume_token(ID);
    jj_consume_token(LP);
    formals = formal(formals);
    jj_consume_token(RP);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SCOLON:{
      jj_consume_token(SCOLON);
{if ("" != null) return new ASTPrototype(type.image, name.image, formals, type.beginLine);}
      break;
      }
    case LBRC:{
ss = new ASTStatements();
      jj_consume_token(LBRC);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRC:
        case IF:
        case RETURN_:
        case FOR:
        case WHILE:
        case DO:
        case PRINT:
        case PRINTLN:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_8;
        }
        s = state();
ss.addElement(s);
      }
      jj_consume_token(RBRC);
{if ("" != null) return new ASTFunction(type.image, name.image, formals, ss, type.beginLine);}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionCallExpression actual(ASTFunctionCallExpression func) throws ParseException {ASTExpression e = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_LIT:
    case MINUS:
    case NOT:
    case LP:
    case NEW:
    case T:
    case F:
    case READ:
    case ID:{
      e = exp();
func.addElement(e);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        e = exp();
func.addElement(e);
      }
{if ("" != null) return func;}
      break;
      }
    default:
      jj_la1[11] = jj_gen;

{if ("" != null) return func;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression varsAndFuncs(Token tok) throws ParseException {Token var; ASTExpression e = null; ASTVariable build; ASTFunctionCallExpression func;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOT:{
      jj_consume_token(DOT);
      var = jj_consume_token(ID);
build = new ASTClassVariable(new ASTBaseVariable(tok.image, tok.beginLine), var.image, var.beginLine);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DOT:
        case LBRCK:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_10;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DOT:{
          jj_consume_token(DOT);
          var = jj_consume_token(ID);
build = new ASTClassVariable(build, var.image, var.beginLine);
          break;
          }
        case LBRCK:{
          jj_consume_token(LBRCK);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT_LIT:
          case MINUS:
          case NOT:
          case LP:
          case NEW:
          case T:
          case F:
          case READ:
          case ID:{
            e = exp();
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jj_consume_token(RBRCK);
build = new ASTArrayVariable(build, e, tok.beginLine);
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
{if ("" != null) return new ASTVariableExpression(build, var.beginLine);}
      break;
      }
    case LBRCK:{
      jj_consume_token(LBRCK);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT_LIT:
      case MINUS:
      case NOT:
      case LP:
      case NEW:
      case T:
      case F:
      case READ:
      case ID:{
        e = exp();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(RBRCK);
build = new ASTArrayVariable(new ASTBaseVariable(tok.image, tok.beginLine), e, tok.beginLine);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DOT:
        case LBRCK:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_11;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LBRCK:{
          jj_consume_token(LBRCK);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT_LIT:
          case MINUS:
          case NOT:
          case LP:
          case NEW:
          case T:
          case F:
          case READ:
          case ID:{
            e = exp();
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            ;
          }
          jj_consume_token(RBRCK);
build = new ASTArrayVariable(build, e, tok.beginLine);
          break;
          }
        case DOT:{
          jj_consume_token(DOT);
          var = jj_consume_token(ID);
build = new ASTClassVariable(build, var.image, var.beginLine);
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
{if ("" != null) return new ASTVariableExpression(build, tok.beginLine);}
      break;
      }
    case LP:{
      jj_consume_token(LP);
func = new ASTFunctionCallExpression(tok.image, tok.beginLine);
      func = actual(func);
      jj_consume_token(RP);
{if ("" != null) return func;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;

{if ("" != null) return new ASTVariableExpression(new ASTBaseVariable(tok.image, tok.beginLine), tok.beginLine);}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression exp() throws ParseException {ASTExpression e;
    e = disjunct();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression disjunct() throws ParseException {ASTExpression result; Token t; ASTExpression rhs;
    result = conjunct();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      t = jj_consume_token(OR);
      rhs = conjunct();
result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression conjunct() throws ParseException {ASTExpression result; Token t; ASTExpression rhs;
    result = negate();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_13;
      }
      t = jj_consume_token(AND);
      rhs = negate();
result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression negate() throws ParseException {ASTExpression result; Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      t = jj_consume_token(NOT);
      result = negate();
{if ("" != null) return new ASTUnaryOperatorExpression(result, t.image, t.beginLine);}
      break;
      }
    case INT_LIT:
    case MINUS:
    case LP:
    case NEW:
    case T:
    case F:
    case READ:
    case ID:{
      result = compare();
{if ("" != null) return result;}
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression compare() throws ParseException {ASTExpression result; Token t; ASTExpression rhs;
    result = addSub();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:
      case NEQ:
      case LEQ:
      case GEQ:
      case LESS:
      case GREAT:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        t = jj_consume_token(EQUAL);
        break;
        }
      case NEQ:{
        t = jj_consume_token(NEQ);
        break;
        }
      case LESS:{
        t = jj_consume_token(LESS);
        break;
        }
      case LEQ:{
        t = jj_consume_token(LEQ);
        break;
        }
      case GREAT:{
        t = jj_consume_token(GREAT);
        break;
        }
      case GEQ:{
        t = jj_consume_token(GEQ);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = addSub();
result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression addSub() throws ParseException {ASTExpression result; Token t; ASTExpression rhs;
    result = multDiv();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        t = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        t = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = multDiv();
result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression multDiv() throws ParseException {ASTExpression result; Token t; ASTExpression rhs;
    result = negative();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_16;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        t = jj_consume_token(TIMES);
        break;
        }
      case DIVIDE:{
        t = jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = negative();
result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
{if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression negative() throws ParseException {ASTExpression result; Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      t = jj_consume_token(MINUS);
      result = negative();
{if ("" != null) return new ASTOperatorExpression(new ASTIntegerLiteral(0, t.beginLine), result, t.image, t.beginLine);}
      break;
      }
    case INT_LIT:
    case LP:
    case NEW:
    case T:
    case F:
    case READ:
    case ID:{
      result = level1();
{if ("" != null) return result;}
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression level1() throws ParseException {Token t; ASTExpression e; int dim = 0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT_LIT:{
      t = jj_consume_token(INT_LIT);
{if ("" != null) return new ASTIntegerLiteral(Integer.parseInt(t.image), t.beginLine);}
      break;
      }
    case T:{
      t = jj_consume_token(T);
{if ("" != null) return new ASTBooleanLiteral(true, t.beginLine);}
      break;
      }
    case F:{
      t = jj_consume_token(F);
{if ("" != null) return new ASTBooleanLiteral(false, t.beginLine);}
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LP:{
        jj_consume_token(LP);
        jj_consume_token(RP);
{if ("" != null) return new ASTNewClassExpression(t.image, t.beginLine);}
        break;
        }
      case LBRCK:{
        jj_consume_token(LBRCK);
        e = exp();
        jj_consume_token(RBRCK);
dim++;
        label_17:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRCK:{
            ;
            break;
            }
          default:
            jj_la1[30] = jj_gen;
            break label_17;
          }
          jj_consume_token(LBRCK);
          jj_consume_token(RBRCK);
dim++;
        }
{if ("" != null) return new ASTNewArrayExpression(t.image, e, dim, t.beginLine);}
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case LP:{
      jj_consume_token(LP);
      e = exp();
      jj_consume_token(RP);
{if ("" != null) return e;}
      break;
      }
    case READ:{
      t = jj_consume_token(READ);
      jj_consume_token(LP);
      jj_consume_token(RP);
{if ("" != null) return new ASTFunctionCallExpression(t.image, t.beginLine);}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
      e = varsAndFuncs(t);
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
